2006-08-23  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: re-enabled --disable-demos configure option.  It was
	disabled due to a bit of stupidity on my part.

2006-08-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: update for 2.10.1 release

2006-08-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* gtk/src/button.hg: fix a typo in the new API for
	Gtk::Button::get_image_position() (was set_image_position()).  Fixes bug
	number 352088.
	* configure.in: bumped revision to 2.10.1 for new release, disabled
	configuration switch for disabling demos because it was breaking 'make
	distcheck' and I couldn't get it figured out in time for a release.  For now
	it will just always build the demos.

2006-08-21  Cedric Gustin  <cedric.gustin@gmail.com>

	* MSVC_Net2003/*.vcproj, MSVC_Net2003/gtkmm.sln: Updated for
	gtkmm-2.10.
	* MSVC_Net2003/examples/printing/*: Added printing example.
	* gtk/src/Makefile_list_of_hg.am_fragment: Moved
	pagesetupunixdialog.hg, printer.hg, printjob.hg and
	printunixdialog.hg to files_posix_hg.
	* gtk/src/pagesetupunixdialog.hg, gtk/src/printer.hg,
	gtk/src/printjob.hg, gtk/src/printunixdialog.hg: Tag classes with
	_GTKMMPROC_WIN32_NO_WRAP as they are not supported on win32.
	* configure.in: Added MSVC project file for printing example to
	AC_CONFIG_FILES list. Added pangocairo to the list of packages
	checked by PKG_CHECK_MODULES (required for building DLLs on win32).

2.10.0:

2006-08-17  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Correct the needed cairomm version.
	* gdk/gdkmm/general.h: Add documentation for Cairo::rectangle() and 
	Cairo::region().
	* gtk/src/scrolledwindow.hg: get_[v|h]scrollbar(): Do not use refreturn, 
	because they are widgets, not just refcountable objects.

2006-08-17  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: Fix tutorial to include code for the simple
	printing example

2006-08-16  Marko Anastasov  <marko@marko.anastasov.name>
