@@ -386,6 +386,7 @@ if test "x$enable_examples" = "xyes"; then
         examples/book/scrolledwindow/Makefile
         examples/book/signals/Makefile
           examples/book/signals/custom/Makefile
+        examples/book/socket/Makefile
         examples/book/spinbutton/Makefile
         examples/book/statusicon/Makefile
         examples/book/table/Makefile
