@@ -3,7 +3,7 @@ SUBDIRS = alignment aspectframe box buttonbox \
 		  drag_and_drop dialogs drawingarea \
 		  entry eventbox expander frame helloworld helloworld2 \
 		  iconview idle input label menus menus_and_toolbars notebook paned printing progressbar \
-		  range_widgets recent_files scrolledwindow signals spinbutton statusicon \
+		  range_widgets recent_files scrolledwindow signals socket spinbutton statusicon \
 		  table textview timeout toolbar treeview update_ui
 
 #deprecated: combo
