@@ -1,0 +1,6 @@
+Makefile
+Makefile.in
+plug
+socket
+.libs
+.deps
