@@ -1,0 +1,7 @@
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+#Build the executable, but don't install it.
+noinst_PROGRAMS = plug socket
+
+plug_SOURCES = plug.cc winidfile.h
+socket_SOURCES = socket.cc winidfile.h
