@@ -1,3 +1,13 @@
+2006-09-19  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* configure.in, docs/tutorial/figures/Makefile.am,
+	docs/tutorial/figures/socket-fail.png, docs/tutorial/figures/socket.png,
+	docs/tutorial/gtkmm-tut.xml, examples/book/Makefile.am,
+	examples/book/socket/.cvsignore, examples/book/socket/Makefile.am,
+	examples/book/socket/plug.cc, examples/book/socket/socket.cc: added new
+	chapter to the tutorial on Gtk::Plug and Gtk::Socket, including a simple
+	example program and a couple of screenshots.
+
 2006-08-23  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* configure.in: re-enabled --disable-demos configure option.  It was
